# kbidle

./: .gitignore  .gitmodules  CMakeLists.txt  KBIdleApp.cpp  KBIdleApp.h  KBInterface.cpp  KBInterface.h  KBManager.cpp  KBManager.h  README.md  kbidle-sleep.sh  kbidle.service  main.cpp
